Trucat-project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truckat-redis-deployment
  labels:
    app: redis
    role: primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: primary
  template:
    metadata:
      labels:
        app: redis
        role: primary
    spec:
      containers:
        - name: redis
          image: redis:7.2.4
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: truckat-redis-service
spec:
  selector:
    app: redis
    role: primary
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: truckat-redis-replica-deployment
  labels:
    app: redis
    role: replica
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis
      role: replica
  template:
    metadata:
      labels:
        app: redis
        role: replica
    spec:
      containers:
        - name: redis-replica
          image: redis:7.2.4
          ports:
            - containerPort: 6379
          command: ["redis-server", "--replicaof", "truckat-redis-service", "6379", "--port", "6379"]
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: truckat-redis-replica-service
spec:
  selector:
    app: redis
    role: replica
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: truckat-node-redis-deployment
  labels:
    app: truckat-node-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: truckat-node-redis
  template:
    metadata:
      labels:
        app: truckat-node-redis
    spec:
      containers:
        - name: truckat-node-redis
          image: arthurescriou/node-redis:1.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: truckat-node-redis-service
spec:
  selector:
    app: truckat-node-redis
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: truckat-frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 21310174/truckat_img:1.0.6
          ports:
            - containerPort: 7654
---

apiVersion: v1
kind: Service
metadata:
  name: truckat-frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 7654
      targetPort: 7654
  type: LoadBalancer
